# adaptyv-lab-ui

./: .gitignore  main.py  package-lock.json  package.json  pyproject.toml
api/: main.py
app/: layout.tsx  page.tsx  providers.tsx
app/protocols/[id]/: page.tsx
components/: protocol-card.tsx  protocol-form.tsx  protocol-runner.tsx  theme-toggle.tsx
components/layout/: app-shell.tsx
lib/: api.ts
