[project]
name = "adaptyv-lab-ui"
version = "0.1.0"
description = "frontend for adaptyv lab"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["fastapi[standard]>=0.115.12", "hamilton-protocols"]

[tool.uv.sources]
hamilton-protocols = { git = "https://github.com/finlay-adaptyvbio/hamilton-protocols.git" }

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["E501", "TID", "COM", "C90", "FBT"]
fixable = ["ALL"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"
